kernel/tests/invalid_data_declarations/references_self_in_family.ck
data Invalid : Invalid -> Prop where